# Python-AI-Course

./: .gitignore  Description.md  pyproject.toml
pythonbase/: main.py
pythonbase/months/1/week-1/: 2.py
tests/: tests.py
