[tool.poetry]
name = "pythonbase"
version = "0.1.0"
description = "Базовая сборка работы с Python"
authors = ["Vladlen Schetinin <vvschetinin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "pythonbase.main:main"
